--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type":"module",
   "version": "1.0.0",
   "description": "",  
-  "main": "src/server.js",
+  "main": "src/server.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
